dataset1235/2025-2/2318198438/users/1225947802/executions/2601575092_354104495.log
== RUN (2025-08-17 02:12:28)
-- CODE: 
p=

num= int(input("Digite o numero: " ))

print("Em ",YYYY,"a UFAM completou", YYYY - XXXX, "anos de fundação" )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:12:29)
-- CODE: 
p=

num= int(input("Digite o numero: " ))

print("Em ",YYYY,"a UFAM completou", YYYY - XXXX, "anos de fundação" )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:15:15)
-- CODE: 


num= int(input("Digite o numero: " ))

print("Em ", num ,"a UFAM completou", num - 1909, "anos de fundação." )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
---- user output:
Digite o numero: Em  2020 a UFAM completou 111 anos de fundação.
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
---- user output:
Digite o numero: Em  2024 a UFAM completou 115 anos de fundação.
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
---- user output:
Digite o numero: Em  1959 a UFAM completou 50 anos de fundação.
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
---- user output:
Digite o numero: Em  1985 a UFAM completou 76 anos de fundação.
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
---- user output:
Digite o numero: Em  2009 a UFAM completou 100 anos de fundação.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:01:44)
-- CODE: 
a=1909-2025

num= int(input("Digite o numero: " ))
print(1909-num)
print("Em ",YYYY,"a UFAM completou" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou" )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou" )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou" )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou" )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou" )
                ^^^^
NameError: name 'YYYY' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:04:16)
-- CODE: 
a=1909-2025

num= int(input("Digite o numero: " ))

print("Em ",YYYY,"a UFAM completou " )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou " )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou " )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou " )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou " )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou " )
                ^^^^
NameError: name 'YYYY' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:02:21)
-- CODE: 
a=1909-2025

num= int(input("Digite o numero: " ))
print(num-1909)
print("Em ",YYYY,"a UFAM completou" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou" )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou" )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou" )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou" )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou" )
                ^^^^
NameError: name 'YYYY' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:13:06)
-- CODE: 


num= int(input("Digite o numero: " ))

print("Em ",YYYY,"a UFAM completou", YYYY - 1909, "anos de fundação." )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou", YYYY - 1909, "anos de fundação." )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou", YYYY - 1909, "anos de fundação." )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou", YYYY - 1909, "anos de fundação." )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou", YYYY - 1909, "anos de fundação." )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou", YYYY - 1909, "anos de fundação." )
                ^^^^
NameError: name 'YYYY' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:06:47)
-- CODE: 
p=

num= int(input("Digite o numero: " ))

print("Em ",YYYY,"a UFAM completou " )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:12:29)
-- CODE: 
p=

num= int(input("Digite o numero: " ))

print("Em ",YYYY,"a UFAM completou", YYYY - XXXX, "anos de fundação" )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:06:48)
-- CODE: 
p=

num= int(input("Digite o numero: " ))

print("Em ",YYYY,"a UFAM completou " )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:13:00)
-- CODE: 


num= int(input("Digite o numero: " ))

print("Em ",YYYY,"a UFAM completou", YYYY - 1909, "anos de fundação." )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou", YYYY - 1909, "anos de fundação." )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou", YYYY - 1909, "anos de fundação." )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou", YYYY - 1909, "anos de fundação." )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou", YYYY - 1909, "anos de fundação." )
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",YYYY,"a UFAM completou", YYYY - 1909, "anos de fundação." )
                ^^^^
NameError: name 'YYYY' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-17 02:15:27)
-- CODE: 


num= int(input("Digite o numero: " ))

print("Em ", num ,"a UFAM completou", num - 1909, "anos de fundação." )

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
---- user output:
Digite o numero: Em  2020 a UFAM completou 111 anos de fundação.
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
---- user output:
Digite o numero: Em  2024 a UFAM completou 115 anos de fundação.
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
---- user output:
Digite o numero: Em  1959 a UFAM completou 50 anos de fundação.
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
---- user output:
Digite o numero: Em  1985 a UFAM completou 76 anos de fundação.
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
---- user output:
Digite o numero: Em  2009 a UFAM completou 100 anos de fundação.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:14:37)
-- CODE: 


num= int(input("Digite o numero: " ))

print("Em ",(num),"a UFAM completou", YYYY - 1909, "anos de fundação." )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",(num),"a UFAM completou", YYYY - 1909, "anos de fundação." )
                                          ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",(num),"a UFAM completou", YYYY - 1909, "anos de fundação." )
                                          ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",(num),"a UFAM completou", YYYY - 1909, "anos de fundação." )
                                          ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",(num),"a UFAM completou", YYYY - 1909, "anos de fundação." )
                                          ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Em ",(num),"a UFAM completou", YYYY - 1909, "anos de fundação." )
                                          ^^^^
NameError: name 'YYYY' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:12:28)
-- CODE: 
p=

num= int(input("Digite o numero: " ))

print("Em ",YYYY,"a UFAM completou", YYYY - XXXX, "anos de fundação" )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
File "XXXX", line 1
    p=
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:05:38)
-- CODE: 


num= int(input("Digite o numero: " ))

print(num-1909)("Em ",YYYY,"a UFAM completou " )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(num-1909)("Em ",YYYY,"a UFAM completou " )
                          ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(num-1909)("Em ",YYYY,"a UFAM completou " )
                          ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(num-1909)("Em ",YYYY,"a UFAM completou " )
                          ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(num-1909)("Em ",YYYY,"a UFAM completou " )
                          ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(num-1909)("Em ",YYYY,"a UFAM completou " )
                          ^^^^
NameError: name 'YYYY' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 02:15:25)
-- CODE: 


num= int(input("Digite o numero: " ))

print("Em ", num ,"a UFAM completou", num - 1909, "anos de fundação." )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
---- user output:
Digite o numero: Em  2020 a UFAM completou 111 anos de fundação.
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
---- user output:
Digite o numero: Em  2024 a UFAM completou 115 anos de fundação.
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
---- user output:
Digite o numero: Em  1959 a UFAM completou 50 anos de fundação.
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
---- user output:
Digite o numero: Em  1985 a UFAM completou 76 anos de fundação.
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
---- user output:
Digite o numero: Em  2009 a UFAM completou 100 anos de fundação.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
